# Stage2-BigData

./: Cargo.toml  README.md  TESTING.md
benchmark_results/html_reports/: index.html  indexing-service_container_performance.html  ingestion-service_container_performance.html  search-service_container_performance.html  system_workflow_performance.html
benchmark_results/html_reports/ingestion-service_criterion_reports/report/: index.html
indexing-service/: Cargo.toml
indexing-service/benches/: indexing_benchmark.rs
ingestion-service/benches/: ingestion_benchmark.rs
scripts/: generate_html_reports.sh  run_benchmarks.sh  run_tests.sh
search-service/tests/: integration_tests.rs
services/: docker-compose.yml
services/control-module/src/: main.rs
services/indexing-service/benches/: indexing_benchmark.rs
services/indexing-service/src/: main.rs
services/indexing-service/src/models/: responses.rs  storage.rs
services/indexing-service/src/routes/: health.rs  index.rs
services/indexing-service/src/services/: indexing.rs
services/indexing-service/tests/: integration_tests.rs
services/ingestion-service/: Cargo.toml
services/ingestion-service/benches/: ingestion_benchmark.rs
services/ingestion-service/src/: main.rs
services/ingestion-service/tests/: integration_tests.rs
services/search-service/: Cargo.toml
services/search-service/benches/: search_benchmark.rs
services/search-service/src/: main.rs
services/search-service/tests/: integration_tests.rs
stage2/: .gitignore
test_results/: test_report.html
tests/: system_integration_tests.rs
(+21 files in other folders)
